--- a/UIEcomerce/angular.json
+++ b/UIEcomerce/angular.json
@@ -8,6 +8,22 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
+        },
+
+        "@schematics/angular:class": {
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        },
+        "@schematics/angular:pipe": {
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
+        },
+        "@schematics/angular:guard": {
+          "skipTests": true
         }
       },
       "root": "",
