--- a/UIEcomerce/package.json
+++ b/UIEcomerce/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@ngrx/signals": "^17.2.0",
     "@stripe/stripe-js": "^3.4.0",
     "ngx-toastr": "^18.0.0",
