--- a/UIEcomerce/package.json
+++ b/UIEcomerce/package.json
@@ -21,6 +21,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@ngrx/signals": "^17.2.0",
     "@stripe/stripe-js": "^3.4.0",
+    "jwt-decode": "^4.0.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
