--- a/UIEcomerce/package.json
+++ b/UIEcomerce/package.json
@@ -24,6 +24,7 @@
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.26.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
